2001-11-09  Mark McLoughlin  <mark@skynet.ie>

	* applet.c, applet.h: kill horrible applets_last hack.

	* drawer.c: (load_drawer_applet):
	* drawer.h:
	* extern.c: (reserve_applet_spot):
	* gnome-panel-properties.c:
	* gnome-run.c: (load_run_applet):
	* launcher.c: (load_launcher_applet_full):
	* logout.c: (load_logout_applet), (load_lock_applet):
	* menu.c: (add_drawers_from_dir), (load_menu_applet):
	* panel-applet-frame.c: (panel_bonobo_applet_load):
	* panel.c: (panel_applet_added), (drag_data_recieved_cb):
	* status.c: (load_status_applet):
	* swallow.c: (load_swallow_applet): update to use return val
	of panel_applet_register instead of applets_last.

2001-11-09  Mark McLoughlin  <mark@skynet.ie>

	* applet.c, applet.h: (panel_register_applet): renamed from
	register_toy. Return an AppletInfo *.

	* drawer.c: (load_drawer_applet):
	* extern.c: (reserve_applet_spot):
	* gnome-run.c: (load_run_applet):
	* launcher.c: (load_launcher_applet_full):
	* logout.c: (load_logout_applet), (load_lock_applet):
	* menu.c: (load_menu_applet):
	* panel-applet-frame.c: (panel_bonobo_applet_load):
	* panel.c: (panel_applet_added), (drag_data_recieved_cb):
	* status.c: (load_status_applet):
	* swallow.c: (load_swallow_applet): update.

2001-11-09  Mark McLoughlin  <mark@skynet.ie>

	* applet.c: tidy up popup menu handling.

	* applet.h: (show_applet_menu): privatise.

	* basep-widget.c, border-widget.c, extern.c, menu-util.c:
	
	* menu.c: (show_item_menu_b_cb): kill unused.

2001-11-08  Glynn Foster  <glynn.foster@sun.com>

	* applet.c, basep-widget.c, button-widget.c,
	  menu-util.c, menu.c, panel-gconf.c, panel-gconf.h:
	  panel-types.h, panel_config_global.h, panelglobalconfig.schema,
	  session.c: More shifting towards gconf - some renames of variables
	  lots of FIXME's.

2001-11-08  Mark McLoughlin  <mark@skynet.ie>

	* basep-widget.c: (basep_pos_get_hide_size),
	(basep_pos_get_hide_pos), (basep_widget_do_hiding),
	(basep_widget_do_showing), (basep_widget_explicit_hide),