@@ -1,5 +1,14 @@
 2001-11-09  Mark McLoughlin  <mark@skynet.ie>
 
+	* applet.c, applet.h: bit of namespace loving.
+
+	* drawer.c, extern.c, gnome-run.c, launcher.c, 
+	  logout.c, menu-properties.c, menu.c, 
+	  panel-applet-frame.c, panel.c, session.c, 
+	  status.c, swallow.c: update.
+
+2001-11-09  Mark McLoughlin  <mark@skynet.ie>
+
 	* applet.c, applet.h: kill horrible applets_last hack.
 
 	* drawer.c: (load_drawer_applet):
